--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,4 @@
----
 
----
 
 <html lang="en">
 	<head>
@@ -11,8 +9,14 @@
 		<title>Astro</title>
 	</head>
 	<body>
+		<a href="/">Home</a>
+        <a href="/about">About</a>
+        <a href="/blog">Blog</a>
+		
 		<h1>Astro</h1>
 		<h1>My Astro Site!</h1>
+		<p>My Astro Site!</p>
+		<p>This is my first astro site!</p>
 		
 	</body>
 </html>
