--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,26 +1,43 @@
 ---
-const pageTitle = "About Me";
 
+import '../styles/global.css';
+
+const pageTitle = "About Me";
 const identity = {
   firstName: "Sarah",
   country: "Canada",
   occupation: "Technical Writer",
-  hobbies: ["photography", "birdwatching", "baseball"],
+  hobbies: ["photography", "birdwatching", "baseball", "reading"],
 };
-
-const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
-
+const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs", "Python"];
 const happy = true;
 const finished = false;
 const goal = 3;
+const skillColor = "navy";
+const fontWeight = "bold";
+const textCase = "uppercase";
+
 ---
 
-   <html lang="en">
+
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>{pageTitle}</title>
+    <style define:vars={{skillColor, fontWeight, textCase}}>
+      h1 {
+        color: purple;
+        font-size: 4rem;
+      }
+      .skill {
+        color: var(--skillColor);
+        font-weight: var(--fontWeight);
+        text-transform: var(--textCase);
+      }
+    </style>
   </head>
+
   <body>
     <a href="/">Home</a>
     <a href="/about/">About</a>
@@ -45,7 +62,7 @@ const goal = 3;
     </ul>
     <p>My skills are:</p>
     <ul>
-    {skills.map((skill) => <li>{skill}</li>)}
+      {skills.map((skill) => <li class="skill">{skill}</li>)}
     </ul>
-</body>
+  </body>
 </html>
