--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,9 @@
 ---
 
 import '../styles/global.css';
+import Navbar from '../components/nav.astro';
+
+
 
 const pageTitle = "About Me";
 const identity = {
@@ -39,9 +42,8 @@ const textCase = "uppercase";
   </head>
 
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Navbar />
+
     <h1>{pageTitle}</h1>
     <h2>... and my new Astro site!</h2>
 
