--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,12 @@
+---
+import '../styles/global.css';
+import Navbar from '../components/nav.astro';
+
+---
+
 <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+  <Navbar />
+
   
     <h1>My Astro Site</h1>
     <h1>My Astro Learning Blog</h1>
