--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,8 @@
+---
+import '../styles/global.css';
+import Navbar from '../components/nav.astro';
 
+---
 
 <html lang="en">
 	<head>
@@ -9,10 +13,7 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
-        <a href="/about">About</a>
-        <a href="/blog">Blog</a>
-		
+		<Navbar />
 		<h1>Astro</h1>
 		<h1>My Astro Site!</h1>
 		<p>My Astro Site!</p>
