--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,12 +1,13 @@
 ---
 import '../styles/global.css';
-import Navbar from '../components/nav.astro';
+import Navbar from '../components/Navbar.astro';
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 
 ---
 
 <body>
-  <Navbar />
-
+  <Header />
   
     <h1>My Astro Site</h1>
     <h1>My Astro Learning Blog</h1>
@@ -18,4 +19,6 @@ import Navbar from '../components/nav.astro';
       <li><a href="/posts/post-1/">Post 1</a></li>
       <li><a href="/posts/post-2/">Post 2</a></li>
       <li><a href="/posts/post-3/">Post 3</a></li>
+    </ul>
+    <Footer />
 </body>
