--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,10 @@
 ---
 import '../styles/global.css';
-import Navbar from '../components/nav.astro';
+import Navbar from '../components/Navbar.astro';
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 
+const pageTitle = 'Home Page';
 ---
 
 <html lang="en">
@@ -10,14 +13,11 @@ import Navbar from '../components/nav.astro';
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<Navbar />
-		<h1>Astro</h1>
-		<h1>My Astro Site!</h1>
-		<p>My Astro Site!</p>
-		<p>This is my first astro site!</p>
-		
+		<Header />
+		<h1>{pageTitle}</h1>
+		<Footer />
 	</body>
 </html>
