--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,10 @@
 ---
+import Hamburger from './Hamburger.astro';
 import Navbar from './Navbar.astro';
 ---
 <header>
   <nav>
+    <Hamburger />
     <Navbar />
   </nav>
 </header>
