--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,11 +5,15 @@ title: "Navbar"
 
 <nav class="navbar">
   <a href="/" class="navbar__logo">My Website</a>
-  <ul class="navbar__list">
-    <li class="navbar__item"><a href="/" class="navbar__link">Home</a></li>
-    <li class="navbar__item"><a href="/about" class="navbar__link">About</a></li>
-    <li class="navbar__item"><a href="/blog" class="navbar__link">Blog</a></li>
-  </ul>
+  
+  <div class="nav-links">
+    <ul class="navbar__list">
+      <li class="navbar__item"><a href="/" class="navbar__link">Home</a></li>
+      <li class="navbar__item"><a href="/about" class="navbar__link">About</a></li>
+      <li class="navbar__item"><a href="/blog" class="navbar__link">Blog</a></li>
+      <li class="navbar__item"><a href="/tags" class="navbar__link">Tags</a></li>
+    </ul>
+  </div>
 </nav>
 
 <style>
